src/app/globals.css
@import "tailwindcss";
@import "tailwind-scrollbar-hide/v4";

/* this fixes dark-light mode styling, makes it so tailwind looks at the html dark class instead of pc mode */
@custom-variant dark (&:where(.dark, .dark *));

:root {
  --background: #ffffff;
  --foreground: #171717;

  /* old brand colors */
  /* --brand-primary: #29815b;
  --brand-primary-dark: #5cc196; */
  /* --brand-primary-hover: #4ea480;
  --brand-primary-active: #125236; */

  /* new brand colors */
  /* --brand-primary: #008149;
  --brand-primary-hover: #009655;
  --brand-primary-active: #006638;
  --brand-primary-dark: #00c472;
  --brand-primary-dark-hover: #00d97e;
  --brand-primary-dark-active: #009e5b; */

  /* new brand colors purple */
  /* --brand-primary: #6b6bcf;
  --brand-primary-hover: #8080d9;
  --brand-primary-active: #5555a8;
  --brand-primary-dark: #7a7ae2;
  --brand-primary-dark-hover: #9292ea;
  --brand-primary-dark-active: #6262bb; */
  --brand-primary: #6b6bcf;
  --brand-primary-hover: #8080d9;
  --brand-primary-active: #5555a8;
  --brand-primary-dark: #8080ed;
  --brand-primary-dark-hover: #9898f2;
  --brand-primary-dark-active: #6666c4;

  --brand-secondary: #070633;
  --brand-secondary-hover: #0d0d52;
  --brand-secondary-active: #050526;
  --brand-secondary-hierarchy: #5a5a70;
}

@theme inline {
  --font-sans: var(--font-rubik);
  --font-mono: var(--font-geist-mono);
}

/* hide scrollbar below md size  */
@media (max-width: 810px) {
  body {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
  body::-webkit-scrollbar {
    display: none;
  }
}

/* to avoid orphans */
p {
  text-wrap: pretty;
}

body {
  font-family: var(--font-rubik), Arial, Helvetica, sans-serif;
  background-color: var(--color-main-bg);
}

@theme {
  /* override default breakpoint */
  --breakpoint-md: 810px;
  /* max characters per line for better readability   */
  --max-width-prose: 65ch;
  --max-width-prose-lg: 75ch;
  --max-width-prose-sm: 55ch;
  --max-width-prose-xs: 45ch;

  /* colors  */
  --color-main-bg: var(--color-zinc-50);
  --color-primary: var(--brand-primary);
  --color-primary-dark: var(--brand-primary-dark);
  --color-primary-foreground: var(--color-zinc-900);
  --color-primary-hover: var(--brand-primary-hover);
  --color-primary-focus: var(--brand-primary-hover);
  --color-primary-active: var(--brand-primary-active);
  --color-navbar-nav-foreground: var(--color-zinc-500);

  --color-sitemap-links: var(--color-zinc-200);

  /* outlines / line separators  */
  --color-navbar-line: var(--color-zinc-200);
  --color-primary-outline: var(--color-zinc-800);
  --color-secondary-outline: var(--color-zinc-300);

  --color-secondary: #070633;
  --color-header-color: var(--color-secondary);
  --color-secondary-hover: var(--brand-secondary-hover);
  --color-secondary-active: var(--brand-secondary-active);
  --color-secondary-hierarchy: var(--color-zinc-700);
  --color-secondary-foreground: var(--color-zinc-50);

  /* custom backgrounds and text colors    */
  --color-csm-red-bg: #ffd6cd;
  --color-csm-red-text: #803713;
  --color-csm-green-bg: #c8e6dc;
  --color-csm-green-text: #29815b;
  --color-csm-purple-bg: #e8ecff;
  --color-csm-purple-text: #535bbf;
  --color-csm-yellow-bg: #ffe397;
  --color-csm-yellow-text: #7a5400;

  /* toggle button variables  */
  --color-toggle-active-bg: var(--toggle-active-bg);
  --color-toggle-active-text: var(--toggle-active-text);
  --color-toggle-inactive-bg: var(--toggle-inactive-bg);
  --color-toggle-inactive-text: var(--toggle-inactive-text);
  --color-toggle-hover-bg: var(--toggle-hover-bg);
  --color-toggle-hover-text: var(--toggle-hover-text);

  /* shadows  */
  --shadow-solid: 8px 8px 0px 0px #4ade80;
  --shadow-solid-dark: 8px 8px 0px 0px #22c55e;
}

@layer base {
  :root {
    /* Light mode  toggle button*/
    --toggle-active-bg: var(--color-zinc-300);
    --toggle-active-text: var(--color-zinc-950);

    --toggle-inactive-bg: var(--color-zinc-100);
    --toggle-inactive-text: var(--color-zinc-500);

    --toggle-hover-bg: var(--color-zinc-200);
    --toggle-hover-text: var(--color-primary);
  }

  .dark {
    --color-main-bg: var(--color-zinc-900);
    --color-primary: var(--brand-primary-dark); /* Your Brand Secondary */
    --color-primary-hover: var(--brand-primary-dark-hover);
    --color-primary-active: var(--brand-primary-dark-active);
    --color-primary-foreground: var(
      --color-zinc-50
    ); /* light text for dark mode */
    --color-secondary: var(
      --color-primary
    ); /* in dark mode replace blue buttons with salvia ones */

    --color-header-color: var(--color-primary-foreground);
    --color-secondary-hover: #27272a;
    --color-secondary-hierarchy: var(--color-zinc-300);
    --color-sitemap-links: var(--color-zinc-200);
    --color-navbar-nav-foreground: var(--color-zinc-400);

    /* outlines / line separators  */
    --color-primary-line: #3f3f46;
    --color-navbar-line: var(--color-zinc-800);
    --color-primary-outline: var(--color-zinc-700);
    --color-secondary-outline: var(--color-zinc-800);

    /* toggle button variables  */
    --toggle-active-bg: var(--color-primary);
    --toggle-active-text: var(--color-primary-foreground);

    --toggle-inactive-bg: var(--color-zinc-800);
    --toggle-inactive-text: var(--color-zinc-400);

    --toggle-hover-bg: var(--color-zinc-700);
    --toggle-hover-text: var(--color-primary-foreground);
  }
}

@layer components {
  .hero-title {
    @apply text-6xl font-bold leading-tight tracking-tight max-md:text-4xl text-primary-foreground;
  }
  .hero-paragraph {
    @apply text-lg md:text-xl text-secondary-hierarchy leading-relaxed max-w-lg;
  }
  .heading-1-big {
    @apply text-[3.5rem] font-bold leading-tight tracking-tight max-md:text-4xl text-primary-foreground;
  }
  .heading-1 {
    @apply text-5xl font-bold leading-tight tracking-tight max-md:text-3xl text-primary-foreground;
  }
  .heading-2 {
    @apply text-4xl font-bold leading-snug max-md:text-2xl text-primary-foreground;
  }

  .article-heading2 {
    @apply text-3xl font-bold mt-8;
  }
  .uxprinciple-origin {
    @apply -mb-8;
  }

  .heading-3 {
    @apply text-3xl font-semibold max-md:text-xl text-primary-foreground;
  }
  .heading-4 {
    @apply text-2xl font-semibold max-md:text-lg text-primary-foreground;
  }
  .heading-5 {
    @apply text-xl font-medium max-md:text-base text-primary-foreground;
  }
  .paragraph {
    @apply text-lg text-primary-foreground;
  }

  .font-rubik-regular-fix {
    @apply font-[350];
  }

  .flex-center {
    @apply flex items-center justify-center;
  }
  .article-link {
    @apply font-semibold text-blue-600 dark:text-blue-400 hover:underline focus:underline;
  }

  .transition-no-background {
    @apply transition-[outline,transform,opacity,box-shadow,border-radius];
  }
  .transition-no-background-opacity {
    @apply transition-[outline,transform,box-shadow,border-radius];
  }
  /* for buttons   */
  .transition-no-outline {
    @apply transition-[background,transform,opacity,box-shadow,border-radius];
  }
  .transition-no-border-radius {
    @apply transition-[outline,background,transform,opacity,box-shadow];
  }

  .card-background {
    @apply bg-white dark:bg-zinc-800/30;
  }

  .cards-border {
    @apply border border-zinc-200 hover:border-zinc-400 dark:border-zinc-700 dark:hover:border-zinc-500;
  }

  .card-text-hover {
    @apply group-hover:text-primary-hover dark:group-hover:text-primary;
  }

  .grid-card-container {
    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 py-10;
  }

  .pill-button-animations {
    @apply cursor-pointer motion-safe:active:scale-95  motion-safe:hover:scale-102 transition-transform duration-200;
    transform-origin: center center;
    will-change: transform;
  }
}

@layer base {
  a,
  button,
  input,
  select,
  textarea,
  [tabindex] {
    @apply focus-visible:outline-3 focus-visible:outline-red-700 dark:focus-visible:outline-red-500 focus-visible:outline-offset-4 focus-visible:rounded-lg motion-safe:transition-all motion-reduce:transition-none;
  }

  /*  the transform origin and will-change are to fix a bug with the scale animation   */
  button {
    @apply cursor-pointer motion-safe:active:scale-95  motion-safe:hover:scale-102 transition-transform duration-200;
    transform-origin: center center;
    will-change: transform;
  }

  strong {
    @apply font-semibold;
  }
}

